# type_traits

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.py  main.cpp  type_traits.sln  type_traits.vcxproj  type_traits.vcxproj.filters
examples/: example.cpp
src/: type_traits.hpp
src/type_traits/: defines_macro.hpp  defines_type.hpp  enable_if_defined.hpp  has_size.hpp  is_bidirectional.hpp  is_forward.hpp  is_input.hpp  is_less_cv.hpp  is_output.hpp  is_virtual_base_of.hpp  remove_all_pointers.hpp
src/zh/type_traits/: defines_macro.hpp  is_more_cv.hpp  is_random_access.hpp  is_same.hpp  is_stronger_qualified.hpp  is_weaker_qualified.hpp
test/: test.cpp
tests/: test.cpp  tests.cpp
zh/: type_traits.hpp
zh/type_traits/: defines_type.hpp  enable_if_defined.hpp  has_size.hpp  is_bidirectional_range.hpp  is_function_like.hpp  is_random_access.hpp  is_range.hpp  is_ratio.hpp  is_similar.hpp  is_weaker_qualified.hpp
